--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 myVenv/
+.DS_Store
+CameraStreamSwift/CameraStream.xcodeproj/project.xcworkspace/xcuserdata/masonlilley.xcuserdatad/UserInterfaceState.xcuserstate
