add queueing so it works on the bad pi + face recognition

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 myVenv/
 .DS_Store
 CameraStreamSwift/CameraStream.xcodeproj/project.xcworkspace/xcuserdata/masonlilley.xcuserdatad/UserInterfaceState.xcuserstate
+dataset/
+trainer/trainer.yml
